main.css
/* ... */
@-webkit-keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}

@keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}

/*----------- TESTIMONIALS / QUOTES------- */
/*----------- TESTIMONIALS / QUOTES------- */

#quoteBox > section {
  position: absolute;
  /* padding: 2rem; */
}
.bottomBox {
  display: flex;
  flex-direction: column;
}
.bottom {
  flex: 1;
  height: 35rem;
}
#quoteBox p {
  padding: 0 6rem;
  font-size: 2.5rem;
  line-height: 3rem;
}
#quoteBox h4 {
  font-size: 1rem;
  padding: 0 8rem;
}
#quoteBox h2 {
  padding-bottom: 30rem;
}
.ref {
  text-align: right;
  height: 2em;
  padding-top: 3.5rem;
}
.bottom {
  border: 1px solid var(--black-color);
}

.disclaimer {
  font-size: 10px;
}

/* Footer */
footer {
  padding-bottom: 5rem;
  margin-bottom: 5rem;
}

footer .subtitle {
  text-align: center;
  color: var(--teal-color);
  margin-bottom: 2.25rem;
}
footer ul.menu{
  display: flex;
  align-items: flex-start;
  justify-content: space-around;
  padding: 0;
  margin: 0;
}


footer li {
  list-style: none;
  margin: .5rem 0;
}

footer li a {
  padding: .25rem .75rem;
}

footer li i {
  font-size: 1.25rem;
}

footer ul.menu.social-links {
  justify-content: center;
}

footer #projects {
  flex-direction: column;
  margin-top: 1rem;
}

.social-links {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

footer .external-links,
footer .social-links,
footer .other-links {
  position: relative;
}

/* MEDIA QUERIES / RESPOSINVE STYLES */
/* MEDIA QUERIES / RESPOSINVE STYLES */
@media screen and (max-width: 1024px) {
  .portfolio .box {
    max-width: 45%;
    width: 39%;
  }

  .skillsListContainer.other .skillsList {
    margin: 0 auto 1rem 30%;
  }

  footer ul.menu.social-links {
    justify-content: space-around;
    align-items: center;
  }

  footer .social-links i {
    font-size: 2.5rem;
  }

  footer ul.other-links {
    margin-top: 1.5rem;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
}
/* ... */

